2002-06-23  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* fhandler.cc (fhandler_base::fstat): Set S_IFIFO for pipes.
	* fhandler_socket.cc (fhandler_socket.cc::fstat): Set S_IFSOCK.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* lib/_cygwin_S_IEXEC.cc: Remove obsolete file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	Use cygwin_{shm,ipc}.h instead of /sys/{shm,ipc}.h throughout.
	* sys/ipc.h: Remove.
	* sys/shm.h: Remove.
	* cygwin_ipc.h: New file.
	* cygwin_shm.h: New file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* cygwin.sc: Add recent changes from ld sources.

2002-06-23  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* winsup.h: Move #ifdef EXPCGF code into "winbase.h".
	* winbase.h: #ifdef EXPCGF code moved here from "winsup.h".

2002-06-21  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* cygserver.cc: The tests for a duplicate server instance are now
	the responsibility of the transport layer.
	(request_loop): Use new `recoverable' flag in call to
	`cygserver_transport::accept ()' and shutdown on an unrecoverable
	error.
	(main): Never call `cygserver_init ()'.  Fake `cygserver_running'
	just for sending a shutdown request.
	* cygserver_client.cc (client_request::send): Comment out
	message-size tracing statements as verbose.
	(client_request::handle): Ditto.
	(client_request_get_version::check_version): #ifdef as DLL-only.
	(check_cygserver_available): Ditto.
	(cygserver_init): Ditto.
	* include/cygwin/cygserver.h
	(client_request_get_version::check_version): #ifdef as DLL-only.
	(check_cygserver_available): Ditto.
	(cygserver_init): Ditto.
	* include/cygwin/cygserver_transport.h
	(transport_layer_base::impersonate_client): #ifdef as
	cygserver-only.
	(transport_layer_base::revert_to_self): Ditto.
	(transport_layer_base::listen): Ditto.
	(transport_layer_base::accept): Ditto.  Add a `recoverable' out
	flag for error handling.
	* include/cygwin/cygserver_transport_sockets.h: Ditto.
	* include/cygwin/cygserver_transport_pipes.h: Ditto.